# pyfieldml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MAINTAINING.md  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  conformance.yml  docs.yml  jupyterlite.yml  release.yml
LICENSES/: CC-BY-SA-2.1-JP.txt
conformance/: README.md  runner.py
docs/: cite.md  faq.md  getting-started.md  index.md
docs/api/: index.md
docs/jupyterlite/: .gitignore  README.md  build.py  jupyter_lite_config.json  requirements.txt
docs/notebooks/: 01_quickstart.ipynb  02_evaluator_graph.ipynb  03_hermite_bending.ipynb  04_muscle_fibers.ipynb  05_meshio_roundtrip.ipynb  06_scikit_fem_poisson.ipynb  07_real_anatomy.ipynb  08_conformance.ipynb  build_notebooks.py
docs/superpowers/plans/: 2026-04-18-phase-0-scaffolding-and-dom.md  2026-04-18-phase-1-model-and-io.md  2026-04-18-phase-2-eval-lagrange.md  2026-04-18-phase-3-hermite-and-legacy.md  2026-04-18-phase-4-interop.md  2026-04-18-phase-5-builders-zoo-notebooks.md  2026-04-18-phase-6-docs-and-release.md  2026-04-18-phase-7-joss.md
docs/superpowers/specs/: 2026-04-18-pyfieldml-design.md
paper/: README.md  paper.bib  paper.md
paper/softwarex/: Makefile  README.md  paper.bib  pyfieldml-softwarex.tex
paper/softwarex/figures/: generate.py
src/pyfieldml/: __init__.py  _version.py  document.py  errors.py
src/pyfieldml/builders/: __init__.py  biomech.py  mesh.py
src/pyfieldml/cli/: __init__.py  __main__.py  bench.py  convert.py  diff.py  inspect.py  lint.py  main.py  plot.py  validate.py
src/pyfieldml/data/: __init__.py  base.py  hdf5.py  text.py
src/pyfieldml/datasets/: __init__.py  _cache.py  registry.py
src/pyfieldml/datasets/_bundled/: __init__.py  bunny_stanford.fieldml  femur.fieldml  femur_bodyparts3d.fieldml  hip_bone_left.fieldml  rectus_femoris.fieldml  scapula.fieldml  skull.fieldml  tibia_left.fieldml  unit_cube.fieldml  vertebra_l3.fieldml
src/pyfieldml/dom/: __init__.py  parser.py  upconverter.py  validator.py  writer.py
src/pyfieldml/eval/: __init__.py  context.py  field.py  graph.py  locate.py
src/pyfieldml/eval/bases/: __init__.py  base.py  hermite.py  lagrange.py  registry.py
src/pyfieldml/interop/: __init__.py  meshio.py  opensim.py  pyvista.py  scikit_fem.py  xdmf.py
src/pyfieldml/model/: __init__.py  _loader.py  _writer.py  bindings.py  evaluators.py  imports.py  region.py  types.py
src/pyfieldml/validation/: __init__.py  diff.py  lint.py
src/pyfieldml/viz/: __init__.py  explorer.py
tests/: conftest.py
tests/benchmarks/: test_reproducibility.py  test_throughput.py
tests/conformance/: cpp_roundtrip.cpp  test_cpp_reference.py
tests/fixtures/: import_stdlib.fieldml  imports_stdlib_real.fieldml  invalid_no_name.fieldml  legacy_0_3_minimal.fieldml  legacy_0_4_minimal.fieldml  make_fixtures.py  minimal.fieldml  not_fieldml.xml  parameter_hdf5.fieldml  parameter_hdf5.h5  parameter_inline.fieldml  reference_aggregate.fieldml  two_types.fieldml
tests/unit/: test_bases_hermite.py  test_bases_lagrange.py  test_bases_registry.py  test_builders_biomech.py  test_cli.py  test_data_hdf5.py  test_data_text.py  test_datasets_registry.py  test_document.py  test_document_model.py  test_dom_parser.py  test_dom_upconverter.py  test_dom_validator.py  test_dom_writer.py  test_errors.py  test_eval_graph.py  test_external_basis_plugin.py  test_field_evaluate.py  test_field_jacobian.py  test_field_sample.py  test_hermite_scaling.py  test_interop_meshio.py  test_interop_opensim.py  test_interop_pyvista.py  test_interop_scikit_fem.py  test_interop_xdmf.py  test_legacy_read.py  test_library.py  test_loader_security.py  test_model_bindings.py  test_model_evaluators.py  test_model_imports.py  test_model_region.py  test_model_types.py  test_public_api.py  test_validation_diff.py  test_validation_lint.py  test_viz_explorer.py
tools/: fetch_real_datasets.py  generate_synthetic_datasets.py
